--- a/media-collection/src/main/resources/application.properties
+++ b/media-collection/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+jwt.public.key=classpath:pub.key
+jwt.private.key=classpath:app.key
+
 spring.application.name=media-collection
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=sa
+spring.datasource.password=
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
