feat: including delay for correct inclusion of data.sql after creating tables

--- a/media-collection/src/main/resources/application.properties
+++ b/media-collection/src/main/resources/application.properties
@@ -1,10 +1,14 @@
 jwt.public.key=classpath:pub.key
 jwt.private.key=classpath:app.key
 
+spring.jpa.defer-datasource-initialization=true
+
+spring.jpa.hibernate.ddl-auto=update
 spring.application.name=media-collection
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
 spring.datasource.password=
+spring.jpa.show-sql=true
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
