--- a/media-collection/src/main/resources/application.properties
+++ b/media-collection/src/main/resources/application.properties
@@ -12,3 +12,8 @@ spring.jpa.show-sql=true
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql=TRACE
+logging.level.org.springframework.orm.jpa=DEBUG
+logging.level.org.springframework.transaction=TRACE
