--- a/media-collection/src/main/resources/application.properties
+++ b/media-collection/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 jwt.public.key=classpath:pub.key
 jwt.private.key=classpath:app.key
 
+cors.allowed.origins=${CORS_ALLOWED_ORIGINS:http://127.0.0.1:5500, http://127.0.0.1:3000}
+
 spring.jpa.defer-datasource-initialization=true
 
 spring.jpa.hibernate.ddl-auto=update
@@ -17,3 +19,7 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql=TRACE
 logging.level.org.springframework.orm.jpa=DEBUG
 logging.level.org.springframework.transaction=TRACE
+
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.boot.autoconfigure.web=DEBUG
