--- a/media-collection/src/main/resources/application.properties
+++ b/media-collection/src/main/resources/application.properties
@@ -11,9 +11,11 @@ spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.id.new_generator_mappings=true
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+springdoc.swagger-ui.path=/swagger-ui.html
 
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql=TRACE
