feat: changing token sending and verification by cookie

--- a/media-collection/src/main/resources/application.properties
+++ b/media-collection/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 jwt.public.key=classpath:pub.key
 jwt.private.key=classpath:app.key
+jwt.cookiename.token=authToken
 
 cors.allowed.origins=${CORS_ALLOWED_ORIGINS:http://127.0.0.1:5500, http://127.0.0.1:3000}
 
